WexGit/Wex_DX/force-app/main/default/objects/Webservice_Seession__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Webservice Seessions</relationshipLabel>
    <relationshipName>Webservice_Seessions</relationshipName>
    <type>Lookup</type>
</CustomField>