WexGit/Wex_DX/force-app/main/default/objects/Webservice_Seession__c/fields/CredAssmtId__c.field-meta.xml
<CustomField>
    <fullName>CredAssmtId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CredAssmtId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>