WexGit/Wex_DX/force-app/main/default/objects/Webservice_Seession__c/fields/Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Object_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Object Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>